# ComfyUI-RefSampling

./: README.md  __init__.py  pyproject.toml
example_workflow/: example_ref_workflow.json
modules/: attn_wrapper.py  ref_controller.py  unet_wrapper.py
nodes/: apply_ref_content_node.py  apply_ref_style_node.py  apply_ref_unet_node.py  ref_apply_node.py  ref_sampler_node.py
utils/: module_utils.py  noise_utils.py  ref_config.py  ref_content_config.py  ref_sampling_utils.py  ref_style_config.py
